--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+config = "0.15.11"
+dotenvy = "0.15.7"
+serde = { version = "1.0.219", features = ["derive"] }
