--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2024"
 config = "0.15.11"
 dotenvy = "0.15.7"
 serde = { version = "1.0.219", features = ["derive"] }
+solana-client = "2.2.7"
+tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
