--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,7 @@ config = "0.15.11"
 dotenvy = "0.15.7"
 serde = { version = "1.0.219", features = ["derive"] }
 solana-client = "2.2.7"
+thiserror = "2.0.12"
 tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
