--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ dotenvy = "0.15.7"
 serde = { version = "1.0.219", features = ["derive"] }
 solana-client = "2.2.7"
 solana-sdk = "2.2.2"
+tabled = "0.18.0"
 thiserror = "2.0.12"
 tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
 tracing = "0.1.41"
